# MeshCoreClient

./: .gitignore  README.md  capacitor.config.ts  index.html  ionic.config.json  package.json  vite.config.ts
android/app/: capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
ios/App/: Podfile
ios/App/App/: Info.plist
src/: App.vue  App.vue.bk  App.vue.txt  main.ts  service-worker.ts  struct.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/MeshCore/: App.ts  Client.ts  Comm.ts  Frame.ts  Helpers.ts  Link.ts  Link.ts.bk  Notification.ts  test-node.ts
src/components/: BleDev.vue  Chat.vue  ChatList.vue  Contacts.vue  Devices.vue  Discover.vue  Settings.vue
src/db/: meshcore.sqlite3
src/router/: index.ts
src/stores/: app.ts
src/views/: Chat.vue  Chat.vue.dev  ChatList.vue  Contacts.vue  Devices.vue  Discover.vue  Settings.vue  TabsPage.vue
